[metadata]
name = psf_srdn
version = 0.1.0
author = Soumee Guha
author_email = ccf3dv@virginia.edu
description = PSF-SRDN: Point Spread Function-Aware Speckle Reducing Diffusion Network
license = MIT
url = https://github.com/soumeeguha/PSF-SRDN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    einops==0.6.0
    matplotlib==3.7.0
    numpy==1.24.4
    pandas==1.4.0
    pillow==10.3.0
    scikit-image==0.18.3
    scikit-learn==1.0.2
    scipy==1.10.1
    seaborn==0.11.2
    sklearn==0.0
    torch==2.1.0
    torchaudio==2.1.0
    torchvision==0.16.0
    torchmetrics==0.9.3
    tqdm==4.65.0

[options.package_data]
* = *.csv, *.txt, *.md
